# rendering-direct-indirect-lighting-importance-sampling

./: AnalyticDirectIntegrator.cpp  CMakeLists.txt  Engine.cpp  Integrator.h  README.md  SceneLoader.cpp  SceneLoader.h
scenes/hw2-fake-ref/: analytic-fake.test  cornell-fake.test  direct3x3-fake.test  direct9-fake.test  dragon-fake.test  sphere-fake.test
scenes/hw4/: circle.test  ggx.test
src/: DirectIntegrator.cpp  PathTracerIntegrator.cpp  RenderPool.cpp  Scene.cpp  Scene.h
